--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ remote_theme             : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-KR"
 title                    : "Eaten Muffin"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
@@ -96,7 +96,7 @@ author:
   name             : "Eaten Muffin"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Junior Programmers"
-  location         : "Seongnam, KR"
+  location         : "Seongnam, South Korea"
   email            :
   links:
     - label: "Email"
@@ -113,7 +113,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
+      url: "https://github.com/eaten-muffin"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -129,7 +129,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: "https://github.com/eaten-muffin"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
