--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -13,14 +13,11 @@ Billy Rick:
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/extravagantman"
 
-Cornelius Fiddlebone:
-  name        : "Cornelius Fiddlebone"
-  bio         : "I ordered what?"
+Geonil Goh:
+  name        : "Geonil Goh"
+  bio         : "Go where the wind blows."
   avatar      : "/assets/images/bio-photo.jpg"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:cornelius@thewhip.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/rhymeswithsackit"
+      url: "mailto:hanulgoh@gmail.com"
