--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -21,3 +21,6 @@ Geonil Goh:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:hanulgoh@gmail.com"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/gigoh"
