--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -22,5 +22,5 @@ Geonil Goh:
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:hanulgoh@gmail.com"
     - label: "GitHub"
-      icon: "fab fa-fw fa-github-square"
+      icon: "fab fa-fw fa-github"
       url: "https://github.com/gigoh"
